--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 repor toalha <button id="botaodetarefa">feito</button> <br>
                 <br>
 
-                chegar tarde <button id="botaodetarefa">feito</button> <br>
+                sair tarde <button id="botaodetarefa">feito</button> <br>
                 <br>
 
                 tirar o lixo <button id="botaodetarefa">feito</button> <br>
@@ -124,7 +124,12 @@
                 href="https://excel.cloud.microsoft/open/onedrive/?docId=36CF5F64172C5CED%21s74bcd3be58594ea08a60373b405bea7a&driveId=36CF5F64172C5CED">
                 <button id="faturamento">faturamento</button>
 
-            </a>
+            </a> <br>
+                <br>
+            <h3>contagem de tarefas</h3> 
+                <a>
+                    href="https://excel.cloud.microsoft/open/onedrive/?docId=36CF5F64172C5CED%21s8f23993cd1814b6084eed308b15c4ecc&driveId=36CF5F64172C5CED&wdOrigin=SEARCHENGINE.GOOGLE%2CAPPHOME-WEB.BANNER.UPLOAD-OCDI&wdPreviousSession=4227a846-93e6-4a09-a99f-26bd17605ed3&wdPreviousSessionSrc=AppHomeWeb&ct=1756815883329"
+                </a>
             </div>
             
         </div>
@@ -137,5 +142,6 @@
 
 
 </body>
+
 
 </html>
