estilização do botão de tarefas

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <h3>contagem de tarefas</h3> 
                 <a
                     href="https://excel.cloud.microsoft/open/onedrive/?docId=36CF5F64172C5CED%21s8f23993cd1814b6084eed308b15c4ecc&driveId=36CF5F64172C5CED&wdOrigin=SEARCHENGINE.GOOGLE%2CAPPHOME-WEB.BANNER.UPLOAD-OCDI&wdPreviousSession=4227a846-93e6-4a09-a99f-26bd17605ed3&wdPreviousSessionSrc=AppHomeWeb&ct=1756815883329">
-                    <button id="contagemdetarefas">tarefas</button>
+                    <button class="contagemdetarefas">tarefas</button>
                 </a>
             </div>
             
@@ -146,6 +146,7 @@
 
 
 </html>
+
 
 
 
