--- a/index.html
+++ b/index.html
@@ -47,10 +47,16 @@
                 ligar os dois ar-condicionados <button id="botaodetarefa">feito</button> <br>
                 <br>
 
+                abrir a agenda <button id="botaodetarefa">feito</button> <br>
+                <br>
+
+                colocar música <button id="botaodetarefa">feito</button> <br>
+                <br>
+
                 ligar Tv <button id="botaodetarefa">feito</button> <br>
                 <br>
 
-                limpar pc <button id="botaodetarefa">feito</button> <br>
+                ligar o pc <button id="botaodetarefa">feito</button> <br>
                 <br>
 
                 limpar porta <button id="botaodetarefa">feito</button> <br>
@@ -146,6 +152,7 @@
 
 
 </html>
+
 
 
 
