--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
             <div style="margin: 60px;">
                 <h2>Faturamento mensal</h2>
             <a 
-                href="https://excel.cloud.microsoft/open/onedrive/?docId=36CF5F64172C5CED%21s74bcd3be58594ea08a60373b405bea7a&driveId=36CF5F64172C5CED">
+                href="https://1drv.ms/x/c/36cf5f64172c5ced/Eb7TvHRZWKBOimA3O0Bb6noBuPrsEaTEEQJogZT7iFJkBw?e=L8eAA0">
                 <button id="faturamento">faturamento</button>
 
             </a> <br>
                 <br>
             <h3>contagem de tarefas</h3> 
                 <a
-                    href="https://excel.cloud.microsoft/open/onedrive/?docId=36CF5F64172C5CED%21s8f23993cd1814b6084eed308b15c4ecc&driveId=36CF5F64172C5CED&wdOrigin=SEARCHENGINE.GOOGLE%2CAPPHOME-WEB.BANNER.UPLOAD-OCDI&wdPreviousSession=4227a846-93e6-4a09-a99f-26bd17605ed3&wdPreviousSessionSrc=AppHomeWeb&ct=1756815883329">
+                    href="https://1drv.ms/x/c/36cf5f64172c5ced/ETyZI4-B0WBLhO7TCLFcTswBcJTn85cvK8Cg5g4zSLtvGg?e=s2WCsH">
                     <button class="contagemdetarefas">tarefas</button>
                 </a>
             </div>
@@ -152,6 +152,7 @@
 
 
 </html>
+
 
 
 
