alteração dos links do excel para abrirem mais rápido

--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
             <div style="margin: 60px;">
                 <h2>Faturamento mensal</h2>
             <a 
-                href="https://1drv.ms/x/c/36cf5f64172c5ced/Eb7TvHRZWKBOimA3O0Bb6noBuPrsEaTEEQJogZT7iFJkBw?e=L8eAA0">
+                href="https://1drv.ms/x/c/36cf5f64172c5ced/Eb7TvHRZWKBOimA3O0Bb6noBukt3Uo3n4EiSoDeRUuDzow?e=DxhGHT">
                 <button id="faturamento">faturamento</button>
 
             </a> <br>
                 <br>
             <h3>contagem de tarefas</h3> 
                 <a
-                    href="https://1drv.ms/x/c/36cf5f64172c5ced/ETyZI4-B0WBLhO7TCLFcTswBcJTn85cvK8Cg5g4zSLtvGg?e=s2WCsH">
+                    href="https://1drv.ms/x/c/36cf5f64172c5ced/ETyZI4-B0WBLhO7TCLFcTswB5oWdVfLOq5PIyqWjJJX5-A?e=1T6ain">
                     <button class="contagemdetarefas">tarefas</button>
                 </a>
             </div>
@@ -152,6 +152,7 @@
 
 
 </html>
+
 
 
 
