identificação de dev

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h2>Lista de tarefas</h2>
         </section>
 
-        <form id="form" class="form" style="margin: 60px;;">
+        <form id="form" class="form" style="margin: 60px;">
             <div class="conteudo-formulario">
                 <label for="nomedobarbeiro">Nome do barbeiro</label>
                 <br>
@@ -137,7 +137,7 @@
     </h2>
 <br>
     <br>
-    <h4>
+    <h4 style="margin: auto 0">
         developed by Arthz933
     </h4>
 
@@ -150,6 +150,7 @@
 
 
 </html>
+
 
 
 
