--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                 <div class="espaco-resultado">
                     <p> Resultado: <span id="contador"></span></p> <br>
-                    <p> <button class= "btnreinicia">zerar lista</button><br> 
+                    <p> <button id= "btnreinicia">zerar lista</button><br> 
                     <p>para contabilizar uma tarefa clique apenas no botão "feito"
                 </div>
             </div>
@@ -150,6 +150,7 @@
 
 
 </html>
+
 
 
 
