btn zera tarefas

--- a/index.html
+++ b/index.html
@@ -111,7 +111,10 @@
 
                 <div class="espaco-resultado">
                     <p> Resultado: <span id="contador"></span></p> <br>
-                    <p> <button id= "btnreinicia">zerar lista</button><br> 
+
+                    <div>
+                        <p> <button id= "btnreinicia">zerar lista</button><br>
+                    </div>
                     <p>para contabilizar uma tarefa clique apenas no botão "feito"
                 </div>
             </div>
@@ -150,6 +153,7 @@
 
 
 </html>
+
 
 
 
