btn zera tarefas

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="espaco-resultado">
                     <p> Resultado: <span id="contador"></span></p> <br>
 
-                    <div>
+                    <div id= divbtnzeratarefas>
                         <p> <button id= "btnreinicia">zerar lista</button><br>
                     </div>
                     <p>para contabilizar uma tarefa clique apenas no botão "feito"
@@ -153,6 +153,7 @@
 
 
 </html>
+
 
 
 
