btn zera tarefas

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <p>para contabilizar uma tarefa clique apenas no botão "feito"
                 </div>
                  <div id= divbtnzeratarefas>
-                        <p> <button id= "btnreinicia">zerar lista</button><br>
+                     <button id= "btnreinicia">zerar lista</button><br>
                     </div>
             </div>
         </form>
@@ -152,6 +152,7 @@
 
 
 </html>
+
 
 
 
