--- a/index.html
+++ b/index.html
@@ -113,12 +113,14 @@
                     <p> Resultado: <span id="contador"></span></p> <br>
                     <p>para contabilizar uma tarefa clique apenas no botão "feito"
                 </div>
-                 <div id= divbtnzeratarefas>
-                     <button id= "btnreinicia">zerar lista</button><br>
-                    </div>
+                 
             </div>
         </form>
     </div>
+
+    <div id= divbtnzeratarefas style= "margin 30px">
+                     <button id= "btnreinicia">zerar lista</button><br>
+        </div>
 
 
 
