--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         </form>
     </div>
 
-    <div id= divbtnzeratarefas style= "margin 30px">
-                     <button id= "btnreinicia">zerar lista</button><br>
+    <div id= divbtnzeratarefas style= "margin 30px 0 auto">
+            <button id= "btnreinicia">zerar lista</button><br>
         </div>
 
 
@@ -154,6 +154,7 @@
 
 
 </html>
+
 
 
 
