--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </form>
     </div>
 
-    <div id= divbtnzeratarefas style= "margin 30px 0 auto">
+    <div id= divbtnzeratarefas style= "margin 30px">
             <button id= "btnreinicia">zerar lista</button><br>
         </div>
 
@@ -154,6 +154,7 @@
 
 
 </html>
+
 
 
 
